--- a/config.env
+++ b/config.env
@@ -1,7 +1,7 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https://github.com/LineageOS/android_kernel_oneplus_sm8150
-KERNEL_SOURCE_BRANCH=lineage-22.1
+KERNEL_SOURCE=https://github.com/GuneetAtwal/android_kernel_oneplus_sm8150
+KERNEL_SOURCE_BRANCH=15
 KERNEL_CONFIG=lineage_sm8150_defconfig
 KERNEL_IMAGE_NAME=Image.gz-dtb
 ARCH=arm64
