--- a/config.env
+++ b/config.env
@@ -1,7 +1,7 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https://github.com/GuneetAtwal/android_kernel_oneplus_sm8150
-KERNEL_SOURCE_BRANCH=15
+KERNEL_SOURCE=https://github.com/Codecity001/android_kernel_oneplus_sm8150
+KERNEL_SOURCE_BRANCH=15-c
 KERNEL_CONFIG=lineage_sm8150_defconfig
 KERNEL_IMAGE_NAME=Image.gz-dtb
 ARCH=arm64
@@ -57,7 +57,7 @@ CUSTOM_ANYKERNEL3_BRANCH=
 ENABLE_CCACHE=true
 
 # DTBO image
-NEED_DTBO=false
+NEED_DTBO=true
 
 # Build boot images
 BUILD_BOOT_IMG=false
