--- a/config.env
+++ b/config.env
@@ -10,9 +10,12 @@ EXTRA_CMDS:LD=ld.lld
 
 # Clang
 ## Custom
-USE_CUSTOM_CLANG=false
-CUSTOM_CLANG_SOURCE=
-CUSTOM_CLANG_BRANCH=
+USE_CUSTOM_CLANG=true
+#CUSTOM_CLANG_SOURCE=
+#CUSTOM_CLANG_BRANCH=
+CUSTOM_CLANG_SOURCE="https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86"
+CUSTOM_CLANG_BRANCH="clang-r450784d"  # LLVM 14-based, Android T (13) toolchain
+
 
 ### if your set USE CUSTOM CLANG to false than DO NOT CHANGE CUSTOM CMDS
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
